1989-09-05         Arnold D. Robbins     <arnold@skeeve.atl.ga.us>

	* prepinfo.c: Improve commentary in the comments, including
	a note that it's unpublished and should not be given away.

1989-07-19         Arnold D. Robbins     <arnold@skeeve.atl.ga.us>

	* prepinfo.c: Initial version.
	* ChangeLog: Created.